[profile]
[profile.dev]
incremental = true

[profile.release-debug]
debug = true
inherits = 'release'

[profile.release-full]
codegen-units = 1
debug = false
inherits = 'release'
lto = 'fat'
panic = 'abort'

[workspace]
members = [
    'crates/hyperion',
    'crates/hyperion-proto',
    'crates/hyperion-proxy',
    'crates/hyperion-utils',
    'crates/system-order',
    'events/tag',
    'tools/packet-inspector',
    'tools/rust-mc-bot',
]
resolver = '2'

[workspace.dependencies]
anyhow = '1.0.97'
approx = '0.5.1'
arrayvec = '0.7.4'
base64 = '0.22.1'
bitfield-struct = "0.10.1"
bitvec = '1.0.1'
bumpalo = '3.16'
byteorder = '1.5.0'
bytes = '1.8.0'
colored = "3.0.0"
compact_str = '0.9.0'
convert_case = "0.7.1"
criterion = '0.5.1'
derive-build = '0.1.1'
directories = "6.0.0"
dotenvy = '0.15.7'
eframe = "0.31.0"
egui = "0.31.0"
egui_dock = "0.16.0"
enumset = '1.1.5'
fastrand = '2.1.0'
flume = '0.11.1'
futures-util = '0.3.31'
glam = "0.30.0"
heapless = '0.8.0'
heed = "0.21.0"
hex = '0.4.3'
humantime = '2.1.0'
hyperion-proxy = { path = "crates/hyperion-proxy" }
itertools = "0.14.0"
kanal = '0.1.1'
libc = '0.2.170'
libdeflater = '1.23.1'
memmap2 = '0.9.5'
mio = { version = '1.0.3', features = ['os-poll', 'net'] }
more-asserts = '0.3.1'
num-derive = '0.4.2'
num-traits = '0.2.19'
num_cpus = "1.16.0"
once_cell = '1.21.3'
ordered-float = "5.0.0"
ouroboros = '0.18.5'
papaya = "0.2.1"
parking_lot = '0.12.3'
plotters-bitmap = '0.3.6'
proc-macro2 = '1.0.94'
proptest = '1.5.0'
quote = '1.0.39'
rand = "0.9.0"
rayon = '1.10.0'
rkyv = '0.8.8'
serde = '1.0.217'
serde_json = '1.0.140'
slotmap = '1.0.7'
snafu = '0.8.5'
syn = '2.0.99'
tango-bench = "0.6.0"
tar = '0.4.41'
thiserror = '2.0.12'
tikv-jemallocator = '0.6.0'
time = '0.3.41'
tokio = '1.44.2'
toml = '0.8.14'
tracing-appender = '0.2.3'
uuid = '1.16.0'

[workspace.dependencies.bvh]
git = 'https://github.com/andrewgazelka/bvh-data'

[workspace.dependencies.bytemuck]
features = ['derive']
version = '1.22.0'

[workspace.dependencies.clap]
features = ['derive']
version = '4.5.35'

[workspace.dependencies.derive_more]
features = ['display', 'from', 'deref', 'deref_mut', 'debug', 'constructor']
version = "2.0.1"

[workspace.dependencies.divan]
git = 'https://github.com/nvzqz/divan'

[workspace.dependencies.flate2]
default-features = false
version = '1.1.1'

[workspace.dependencies.flecs_ecs]
features = ['flecs_manual_registration']
git = 'https://github.com/Indra-db/Flecs-Rust'

[workspace.dependencies.hyperion]
path = 'crates/hyperion'

[workspace.dependencies.hyperion-proto]
path = 'crates/hyperion-proto'

[workspace.dependencies.hyperion-utils]
path = 'crates/hyperion-utils'

[workspace.dependencies.indexmap]
features = ['rayon']
version = '2.9.0'

[workspace.dependencies.ndarray]
features = ['blas']
version = '0.16.1'

[workspace.dependencies.plotters]
default-features = false
version = '0.3.6'

[workspace.dependencies.reqwest]
features = ['rustls-tls', 'stream']
version = '0.12.12'

[workspace.dependencies.hyperion-respawn]
path = 'crates/hyperion-respawn'

[workspace.dependencies.roaring]
features = ['simd']
version = '0.10.12'

[workspace.dependencies.rustc-hash]
features = ['nightly']
version = '2.0.0'

[workspace.dependencies.sha2]
version = '0.10.8'

[workspace.dependencies.syntect]
default-features = false
version = '5.2.0'

[workspace.dependencies.system-order]
path = 'crates/system-order'

[workspace.dependencies.tokio-util]
features = ['full']
version = '0.7.12'

[workspace.dependencies.tracing]
features = ['release_max_level_info']
version = '0.1.40'

[workspace.dependencies.tracing-subscriber]
features = ['env-filter', 'time']
version = '0.3.18'

[workspace.dependencies.tracing-tracy]
features = ['timer-fallback']
version = '0.11.4'

[workspace.dependencies.valence_anvil]
branch = 'feat-open'
features = ['parsing']
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_build_utils]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_generated]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_ident]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_nbt]
branch = 'feat-open'
features = ['serde']
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_protocol]
branch = 'feat-open'
features = ['compression']
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_registry]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_server]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_text]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.tag]
path = "events/tag"

[workspace.dependencies.rust-mc-bot]
path = "tools/rust-mc-bot"

[workspace.lints]
[workspace.lints.clippy]
cast_precision_loss = 'allow'
future_not_send = 'allow'
missing_errors_doc = 'allow'
missing_panics_doc = 'allow'
module_name_repetitions = 'allow'
print_stdout = 'deny'
single_match_else = 'allow'
too_long_first_doc_paragraph = 'allow'
too_many_lines = 'allow'

upper_case_acronyms = 'deny'

[workspace.lints.clippy.complexity]
level = 'deny'
priority = -1

[workspace.lints.clippy.nursery]
level = 'deny'
priority = -1

[workspace.lints.clippy.pedantic]
level = 'deny'
priority = -1

[workspace.lints.clippy.perf]
level = 'deny'
priority = -1

[workspace.lints.clippy.style]
level = 'deny'
priority = -1

[workspace.lints.clippy.suspicious]
level = 'deny'
priority = -1

[workspace.lints.rust]
[workspace.lints.rust.future_incompatible]
level = 'deny'
priority = -1

[workspace.lints.rust.keyword_idents]
level = 'deny'
priority = -1

[workspace.lints.rust.let_underscore]
level = 'deny'
priority = -1

[workspace.lints.rust.nonstandard_style]
level = 'deny'
priority = -1

[workspace.lints.rust.refining_impl_trait]
level = 'deny'
priority = -1

[workspace.lints.rust.rust_2018_idioms]
level = 'deny'
priority = -1

[workspace.lints.rust.rust_2024_compatibility]
level = 'deny'
priority = -1

[workspace.package]
documentation = 'https://andrewgazelka.github.io/hyperion'
edition = '2024'
license = 'Apache-2.0'
repository = 'https://github.com/andrewgazelka/hyperion'
version = '0.1.0'
